// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accept Button primary success Button 1`] = `
<button
  className="btn-success width-auto btn btn-primary"
  disabled={false}
  type="button"
>
  Primary
</button>
`;

exports[`Accept Button secondary success Button 1`] = `
<button
  className="btn-success width-auto btn btn-secondary"
  disabled={false}
  type="button"
>
  Secondary
</button>
`;

exports[`Accept Button tertiary success Button 1`] = `
<button
  className="btn-success width-auto btn btn-tertiary"
  disabled={false}
  type="button"
>
  Primary
</button>
`;

exports[`Default Button primary Button 1`] = `
<button
  className="btn-default width-auto btn btn-primary"
  disabled={false}
  type="button"
>
  Primary
</button>
`;

exports[`Default Button secondary Button 1`] = `
<button
  className="btn-default width-auto btn btn-secondary"
  disabled={false}
  type="button"
>
  Secondary
</button>
`;

exports[`Default Button tertiary Button 1`] = `
<button
  className="btn-default width-auto btn btn-tertiary"
  disabled={false}
  type="button"
>
  Tertiary
</button>
`;

exports[`Disabled Button primary disabled Button 1`] = `
<button
  className=" width-auto disabled btn btn-primary"
  disabled={false}
  type="button"
>
  Primary
</button>
`;

exports[`Disabled Button secondary disabled Button 1`] = `
<button
  className=" width-auto disabled btn btn-secondary"
  disabled={false}
  type="button"
>
  Secondary
</button>
`;

exports[`Disabled Button tertiary disabled Button 1`] = `
<button
  className=" width-auto disabled btn btn-tertiary"
  disabled={false}
  type="button"
>
  Primary
</button>
`;
